[package]
name = "landscape-ebpf"
version.workspace = true
edition.workspace = true

[dependencies]
landscape-common = { path = "../landscape-common" }

thiserror = { workspace = true }
libbpf-rs = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
ctrlc = { workspace = true }
pnet = { workspace = true }
once_cell = { workspace = true }
# self_cell = { workspace = true }
tokio = { workspace = true, features = ["full"] }
nix = { version = "0.28", default-features = false, features = [
    "net",
    "user",
    "sched",
] }

socket2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
plain = "0.2"

# logs
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }


[build-dependencies]
libbpf-cargo = { workspace = true }

vmlinux_6_1_dep = { package = "vmlinux", git = "https://github.com/libbpf/vmlinux.h.git", rev = "a9c092aa771310bf8b00b5018f7d40a1fdb6ec82", optional = true }
vmlinux_6_6_dep = { package = "vmlinux", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94", optional = true }
vmlinux_latest_dep = { package = "vmlinux", git = "https://github.com/libbpf/vmlinux.h.git", rev = "8f91e9fd5b488ff57074e589e3960940f3387830", optional = true }

[features]
vmlinux_6_1 = ["dep:vmlinux_6_1_dep"]
vmlinux_6_6 = ["dep:vmlinux_6_6_dep"]
vmlinux_latest = ["dep:vmlinux_latest_dep"]
